fix(css): fix the alignment of checkboxes and radio buttons.

--- a/src/assets/css/form.css
+++ b/src/assets/css/form.css
@@ -57,7 +57,7 @@
 	box-shadow: 0 0 0 var(--ring-size) var(--ring-colour);
 	flex-shrink: 0;
 	height: calc(var(--spacing) * 4);
-	margin-block-start: calc(var(--spacing) * 0.5);
+	margin-block-start: var(--spacing);
 	outline: 0;
 	transition-duration: var(--default-transition-duration);
 	transition-property: all;
@@ -111,6 +111,7 @@
 	box-shadow: 0 0 0 var(--ring-size) var(--ring-colour);
 	flex-shrink: 0;
 	height: calc(var(--spacing) * 4);
+	margin-block-start: var(--spacing);
 	outline: 0;
 	transition-duration: var(--default-transition-duration);
 	transition-property: all;
